Make wrapp slicewise

--- a/porous_media_analyzer/pma_EN.lng
+++ b/porous_media_analyzer/pma_EN.lng
@@ -14,6 +14,7 @@ RESC: Re-scale
 MCAV: Marching Cubes Area and Volume
 FFSO: Formation factor solver
 BKDI: Breakthrough diameter
+FMCH: Full Morphological Characterization
 DESCRIPTION_OTSU: Performs an automated binarization, the threshold is chosen using Otsu variance minimization method
 DESCRIPTION_WATE: Performs a watershed image segmantation using a variation of the Gotsink method. Compactness parameter is kept, but the fixed footprint is replaced by a automated calculation for each marker, equivalent to half of its distance map value.
 DESCRIPTION_AOSE: Performs an adptative opening segmentation, an alternative method to watershed segmentation.
@@ -21,6 +22,7 @@ DESCRIPTION_SHAP: Calculates shape factor in a labeled image.
 DESCRIPTION_AAPP: Calculates the pore-scale permeability using the Arns-Adler method, which approximates the non-linear viscous flow equation system to a linear equation system by estimating a non-viscous permeability in each voxel based on the distance map.
 DESCRIPTION_SKEL: Skeletonizes a binary image.
 DESCRIPTION_SBPP: Calculates pore-scale permeability by associating a cross-section permeability to each skeleton voxel in a sekeletonized image.
+DESCRIPTION_FMCH: Performs a full characteriaztion focused on REV identification. Includes phase and size footprint covariogram, erosion based Minkowsky functionals calculation and subsampling of phase count, pore size, formation factor and permeability.
 BTN_PREVIEW_PREVIEW: Preview
 BTN_PREVIEW_RUN: Run
 BTN_PREVIEW_CANCEL: Cancel
